# car-plate-detector

./: .env.template  Makefile  README.md  download_model.py  pyproject.toml
app/: cli.py  config.py  detector.py  main.py
app/utils/: detector.py  formatter.py  image_loader.py  ocr.py
data/results/: car1.json  car2.json  car3.json  car4.json  car5.json  car6.json  car7.json  car8.json  combined.json
